Back to the containerised connStr and api addr

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ResearchCruiseApp-DB": "Server=localhost, 1433; Database=ResearchCruiseApp; User Id=sa; Password=p@ssw0rd; Encrypt=False"
+    "ResearchCruiseApp-DB": "Server=researchcruiseapp-db-dc, 1433; Database=ResearchCruiseApp; User Id=sa; Password=p@ssw0rd; Encrypt=False"
   },
   "SmtpSettings": {
     "SmtpServer": "smtp.gmail.com",
