--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/ResearchCruiseApp-API.csproj
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/ResearchCruiseApp-API.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
         <PackageReference Include="MailKit" Version="4.5.0" />
         <PackageReference Include="MediatR" Version="12.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
