Change cruise application number to int

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,7 @@
         "assets/*"
       ],
       "@components/*": [
-        "components/*"
+        "Components/*"
       ],
       "@config/*": [
         "config/*"
