--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
@@ -17,8 +17,10 @@
   },
   "FrontendUrl": "http://localhost:3000",
   "JWT": {
-    "ValidAudience": "http://localhost:3000",
-    "ValidIssuer": "http://localhost:8080",
+    "ValidAudience": "https://rejsy.ug.edu.pl/",
+    "ValidIssuer": "https://rejsy.ug.edu.pl/",
+    "AccessTokenLifetimeSeconds": "24000",
+    "RefreshTokenLifetimeSeconds": "24000",
     "Secret": "JWTp@ssw0rdTwoHundredFiftySixBitsAtLeast"
   }
 }
