--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/ResearchCruiseApp-API.csproj
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/ResearchCruiseApp-API.csproj
@@ -29,6 +29,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="UrlBase64" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
