Configure database seeding in appsettings.json/app.env

--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
@@ -22,5 +22,6 @@
     "AccessTokenLifetimeSeconds": "24000",
     "RefreshTokenLifetimeSeconds": "24000",
     "Secret": "JWTp@ssw0rdTwoHundredFiftySixBitsAtLeast"
-  }
+  },
+  "SeedDatabase": false
 }
