--- a/app.env
+++ b/app.env
@@ -6,7 +6,7 @@ Logging__LogLevel__Microsoft.AspNetCore=Warning
 FrontendUrl=http://localhost:3000
 REACT_APP_API_URL=http://localhost:8080
 # Connection Strings
-ConnectionStrings__ResearchCruiseApp-DB=Server=db,1433;Database=ResearchCruiseApp;User Id=sa;Password=p@ssw0rd;Encrypt=False
+ConnectionStrings__ResearchCruiseApp=Server=db,1433;Database=ResearchCruiseApp;User Id=sa;Password=p@ssw0rd;Encrypt=False
 
 # SMTP Settings
 SmtpSettings__SmtpServer=smtp.gmail.com
@@ -20,3 +20,5 @@ JWT__ValidAudience=http://localhost:3000
 JWT__ValidIssuer=http://localhost:8080
 JWT__Secret=q[ow;d?K*(jmuq%?SZ_9fF%Z#:gD6-vcSu(A=[s*a9hAWzq8#HqBnTYFTt{o=Lj<dqx8WMC*!,WavVLAXsm/]4YZP}2DMDy>Mpq(U{YDE%)[.25jgxs?BG$>LRZh#KU@7PGCfjm35}j3/*>>96Q(uC*s%o7nV\v-5W%K
 
+# Database initialization flag
+SeedDatabase=false
