--- a/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
+++ b/ResearchCruiseApp-API/ResearchCruiseApp-API/appsettings.json
@@ -13,14 +13,14 @@
     "SmtpPort": 465,
     "SmtpUsername": "bauniwersytetu@gmail.com",
     "SmtpPassword": "yamw skcf jfzj aiqn",
-    "SenderName": "Biuro Armatora Uniwersytetu"
+    "SenderName": "Biuro Armatora z jednostką r/v Oceanograf, Uniwersytet Gdański"
   },
   "FrontendUrl": "http://localhost:3000",
   "JWT": {
     "ValidAudience": "https://rejsy.ug.edu.pl/",
     "ValidIssuer": "https://rejsy.ug.edu.pl/",
-    "AccessTokenLifetimeSeconds": "24000",
-    "RefreshTokenLifetimeSeconds": "24000",
+    "AccessTokenLifetimeSeconds": "3600",
+    "RefreshTokenLifetimeSeconds": "7200",
     "Secret": "JWTp@ssw0rdTwoHundredFiftySixBitsAtLeast"
   },
   "SeedDatabase": false
