--- a/app.env
+++ b/app.env
@@ -13,11 +13,13 @@ SmtpSettings__SmtpServer=smtp.gmail.com
 SmtpSettings__SmtpPort=465
 SmtpSettings__SmtpUsername=bauniwersytetu@gmail.com
 SmtpSettings__SmtpPassword=yamw skcf jfzj aiqn
-SmtpSettings__SenderName=Biuro Armatora Uniwersytetu
+SmtpSettings__SenderName=Biuro Armatora z jednostką r/v Oceanograf, Uniwersytet Gdański
 
 # JWT
 JWT__ValidAudience=http://localhost:3000
 JWT__ValidIssuer=http://localhost:8080
+JWT__AccessTokenLifetimeSeconds=3600
+JWT__RefreshTokenLifetimeSeconds=7200
 JWT__Secret=q[ow;d?K*(jmuq%?SZ_9fF%Z#:gD6-vcSu(A=[s*a9hAWzq8#HqBnTYFTt{o=Lj<dqx8WMC*!,WavVLAXsm/]4YZP}2DMDy>Mpq(U{YDE%)[.25jgxs?BG$>LRZh#KU@7PGCfjm35}j3/*>>96Q(uC*s%o7nV\v-5W%K
 
 # Database initialization flag
